--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "packageManager": "pnpm@10.10.0",
   "dependencies": {
     "@prisma/client": "6.7.0",
+    "bcryptjs": "3.0.2",
     "dotenv": "16.5.0",
     "fastify": "5.3.2",
     "zod": "3.24.4"
