--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,7 @@
     "yoavbls.pretty-ts-errors",
     "prisma.prisma",
     "ms-azuretools.vscode-containers",
-    "ms-azuretools.vscode-docker"
+    "ms-azuretools.vscode-docker",
+    "vitest.explorer"
   ]
 }
