--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "build": "tsup src --out-dir build",
-    "start": "node build/server.js"
+    "start": "node build/server.js",
+    "test": "vitest --run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest --coverage --run",
+    "test:ui": "vitest --ui"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "packageManager": "pnpm@10.10.0",
+  "packageManager": "pnpm@10.11.0",
   "dependencies": {
     "@prisma/client": "6.7.0",
     "bcryptjs": "3.0.2",
@@ -22,9 +26,13 @@
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@types/node": "22.15.17",
+    "@vitest/coverage-v8": "3.1.3",
+    "@vitest/ui": "3.1.3",
     "prisma": "6.7.0",
     "tsup": "8.4.0",
     "tsx": "4.19.4",
-    "typescript": "5.8.3"
+    "typescript": "5.8.3",
+    "vite-tsconfig-paths": "5.1.4",
+    "vitest": "3.1.3"
   }
 }
