--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.11.0",
   "dependencies": {
+    "@fastify/jwt": "9.1.0",
     "@prisma/client": "6.7.0",
     "bcryptjs": "3.0.2",
     "dayjs": "1.11.13",
