--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "dev": "tsx watch src/server.ts",
     "build": "tsup src --out-dir build",
     "start": "node build/server.js",
-    "test": "vitest --run",
-    "test:watch": "vitest",
+    "test": "vitest --run --project unit",
+    "test:e2e": "vitest --run --project e2e",
+    "test:watch": "vitest --project unit",
+    "test:e2e:watch": "vitest --project e2e",
     "test:coverage": "vitest --coverage --run",
     "test:ui": "vitest --ui"
   },
@@ -17,6 +19,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.11.0",
   "dependencies": {
+    "@fastify/cookie": "11.0.2",
     "@fastify/jwt": "9.1.0",
     "@prisma/client": "6.7.0",
     "bcryptjs": "3.0.2",
@@ -28,9 +31,11 @@
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@types/node": "22.15.17",
+    "@types/supertest": "6.0.3",
     "@vitest/coverage-v8": "3.1.3",
     "@vitest/ui": "3.1.3",
     "prisma": "6.7.0",
+    "supertest": "7.1.1",
     "tsup": "8.4.0",
     "tsx": "4.19.4",
     "typescript": "5.8.3",
