fix: update run-unit-tests.yaml to use the latest version of the action

--- a/.github/workflows/run-unit-tests.yaml
+++ b/.github/workflows/run-unit-tests.yaml
@@ -23,6 +23,6 @@ jobs:
           # Default: ''
           cache: 'pnpm'
 
-      - run: pnpm ci
+      - run: pnpm install
       - run: pnpm run test
 
